--- a/.github/workflows/hotfix.yml
+++ b/.github/workflows/hotfix.yml
@@ -11,14 +11,14 @@ jobs:
   hotfix:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v2
 
       - uses: sitezen/pr-comment-checker@v1.0.1
         with:
-          pr_description_should_contain: '`hotfix`'
-          
+          pr_description_should_contain: "`hotfix`"
+
       - uses: AnarkisGaming/workshop@v1
         with:
           appID: 108600
